リンク先まとめる

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,9 +1,10 @@
+/* top */
+/* ページ全体 */
 html, body {
   margin: 0;
   height: 100%;
 }
 
-/* ===== TOPページ専用（他と被らない） ===== */
 .top {
   position: relative;
   min-height: 100vh;
@@ -32,7 +33,8 @@ html, body {
   background-image: image-url("5050.jpeg");
 }
 
-/* 中央コンテンツ：画面ど真ん中固定 */
+  /* ロゴ */
+  /* 中央配置*/
 .top__content {
   position: relative;
   z-index: 2;
@@ -43,11 +45,11 @@ html, body {
   align-items: center;
   justify-content: center;
 
-  gap: 40px;         /* ロゴとボタンの間 */
-  transform: translateY(-40px); /* ← “ちょい上” 調整（好みで -20〜-80） */
+  gap: 40px;         
+  transform: translateY(-40px); 
 }
 
-/* ロゴ：絶対に勝つ（上書き対策） */
+/* サイズ指定 */
 .top__logo {
   display: block !important;
   width: 300px !important;
@@ -64,6 +66,7 @@ html, body {
 
   filter: drop-shadow(0 8px 18px rgba(0, 0, 0, 0.15));
 }
+
 
 /* ボタン */
 .top__buttons {
@@ -104,7 +107,8 @@ html, body {
 }
 
 
-/* /play */
+/* play */
+/* ページ全体 */
 .play-page {
   position: relative;
   min-height: 100vh;
