--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
          <div><%= link_to "🖊", new_post_path, class: "text-white nav-link" %></div>
         <div><%= link_to "▷", confirm_posts_path, class: "text-white nav-link" %></div>
         <div><%= link_to "MEMBERS", users_path, class: "text-white nav-link" %></div>
-        <div><%= link_to "MYPAGE", user_path(current_user.id), class: "text-white nav-link" %></div>
+        <div><%= link_to "MYPL", user_path(current_user.id), class: "text-white nav-link" %></div>
         <div><%= link_to "LOGOUT", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-white nav-link" %></div>
       </header>
     <% end %>
