--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,53 +1,63 @@
-<div class="cover-edit">
-  <div class="container">
-    <div class="row">
-      <h1 class="font-weight-normal mt-5 mb-5">投稿編集</h1>
+<div class="cover-new">
+  <div class="container d-flex flex-column align-items-center">
+
+    <div class="row mt-5">
+      <h1 class="font-weight-normal">EDIT</h1>
     </div>
 
-    <% if @post.errors.any? %>
-      <div class="card text-center text-white bg-danger mb-3">
-        <%= @post.errors.count %>件のエラーが発生しました
-        <% @post.errors.full_messages.each do |message| %>
-          <%= message %>
+    <%= form_with model: @post, local: true do |f| %>
+
+      <% if @post.errors.any? %>
+        <div class="card text-center text-white bg-danger mt-3">
+          <%= @post.errors.count %>件のエラーが発生しました
+          <% @post.errors.full_messages.each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+        </div>
+      <% end %>
+
+      <div class="form-group mb-3">
+        <label class="form-label">タイトル</label>
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label">アーティスト</label>
+        <%= f.text_field :artist, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label">歌詞</label>
+        <%= f.text_area :lyrics, rows: 5, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label">コメント</label>
+        <%= f.text_area :text, rows: 3, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label">画像</label><br>
+
+        <% if @post.image.attached? %>
+          <%= image_tag @post.image, style: "width:400px; height:300px; object-fit:cover;" %><br>
         <% end %>
+
+        <label class="form-label">画像を変更する</label><br>
+        <%= f.file_field :image %>
+      </div>
+
+      <div class="form-group">
+        <%= f.select :status,
+          Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"), k] },
+          {},
+          { class: "custom-select w-25 mb-3" } %>
+      </div>
+
+      <div class="btn-area">
+        <%= f.submit "保存", class: "btn btn-success" %>
+        <%= link_to "投稿詳細へ", post_path(@post), class: "btn btn-dark" %>
       </div>
     <% end %>
-
-    <div class="row">
-      <%= form_with model: @post, local: true do |f| %>
-
-        <div class="form-group mb-3">
-          <label class="form-label">タイトル</label>
-          <%= f.text_field :title, class: "form-control" %>
-        </div>
-
-        <div class="form-group mb-3">
-          <label class="form-label">アーティスト</label>
-          <%= f.text_field :artist, class: "form-control" %>
-        </div>
-
-        <div class="form-group mb-3">
-          <label class="form-label">歌詞</label>
-          <%= f.text_area :lyrics, rows: 5, class: "form-control" %>
-        </div>
-
-        <div class="form-group mb-4">
-          <label class="form-label">画像</label><br>
-          <% if @post.image.attached? %>
-            <%= image_tag @post.image, style: "width:400px; height:300px; object-fit:cover;" %><br>
-          <% end %>
-          <label class="form-label">画像を変更する</label><br>
-          <%= f.file_field :image %><br>
-        </div>
-
-        <div class="form-group">
-          <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"), k] }, {}, { class: "custom-select w-25 mb-3" } %>
-        </div>
-
-        <%= f.submit '保存する', class: "btn btn-success" %><br>
-        <%= link_to '投稿詳細へ', post_path(@post), class: "btn btn-dark mt-3" %>
-
-      <% end %>
-    </div>
   </div>
 </div>
