--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container d-flex flex-column align-items-center">
 
     <div class="row mt-5">
-      <h1 class="font-weight-normal">投稿一覧</h1>
+      <h1 class="font-weight-normal">HOME</h1>
     </div>
 
     <div class="w-100 post-list-wrap">
