--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -45,7 +45,7 @@
         </div>
 
 
-        <%= f.submit '投稿する', class: "btn btn-success" %>
+        <%= f.submit '投稿', class: "btn btn-success" %>
       <% end %>
     </div>
   </div>
