[コミットメッセージ]

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,7 @@
 .cover-user-show {
     height: 100%;
     width: 100%;
-    background-image: url(/assets/siro.jpg);
+    background-image:image-url("siro.jpg");
     background-color: rgba(255, 255, 255, 0.4);
     background-blend-mode: lighten;
     background-size: 100% 100%;
@@ -11,7 +11,7 @@
 .cover-user-index {
     height: 100%;
     width: 100%;
-    background-image: url(/assets/siro.jpg);
+    background-image: image-url("siro.jpg");
     background-color: rgba(255, 255, 255, 0.4);
     background-blend-mode: lighten;
     background-size: 100% 100%;
@@ -105,7 +105,7 @@
 .cover-user-edit {
     height: 100%;
     width: 100%;
-    background-image: url(/assets/mypage_edit.jpg);
+    background-image: image-url("mypage_edit.jpg");
     background-color: rgba(255, 255, 255, 0.4);
     background-blend-mode: lighten;
     background-size: 100% 100%;
